2014-07-02  Chris Allegretta <chrisa@asty.org>
	* src/files.c (do_lockfile): Check whether the directory
	  of the file we're trying to lock exists, and make the
	  resulting error message more intuitive.  Fixes
	  Savannah bug #42639 reported by Benno Schulenberg.

2014-07-02  Mark Majeres  <mark@engine12.com>
	* src/text.c (undo_cut, redo_cut, update_undo): Handle the
	cases of cutting-from-cursor-to-end-of-line correctly.
	* src/nano.c (do_input): Don't preserve the cutbuffer when
	CUT_TO_END is toggled -- it would intermix two cut types.
	* src/text.c (redo_cut, do_undo, do_redo): Don't forget to
	free the cutbuffer after use.

2014-07-02  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h: Add a typedef for a pointer to a function.
	* src/global.c (func_from_key): New wrapper.
	* src/prompt.c (get_prompt_string, do_prompt): Use the new
	wrapper to make the code a bit cleaner.
	* src/help.c (do_help, parse_help_input): Use the wrapper.
	* src/browser.c (do_browser, parse_browser_input): Likewise.
	* src/search.c (search_init, do_gotolinecolumn): Likewise.
	* src/search.c (findnextstr): Replace a call of old wrapper
	'getfuncfromkey()' with	a call of new 'func_from_key()'.
	* src/winio.c (getfuncfromkey): Delete now unneeded wrapper.
	* src/nano.c (usage, main), doc/texinfo/nano.texi: Properly
	exclude the --quiet option when --disable-nanorc was given.

2014-07-01  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser), src/help.c (do_help): Make sure
	to always set 'currmenu', so that we can rely on it.
	* src/*.c (get_shortcut): Now that 'currmenu' is really global,
	stop passing it around.
	* src/help.c (help_init), src/winio.c (bottombars): There are
	no tagless functions, so there is no need to check.
	* src/prompt.c (do_prompt, get_prompt_string): Don't pass the
	menu, just set it earlier.
	* src/prompt.c (get_prompt_string): Group the arguments better.
	* src/global.c (shortcut_init), src/browser.c (do_filesearch):